tests/success/modules/Builtins.vix
test = Sixten.Builtin.printInt 123
