tests/syntax-error/DuplicateDefinition2.vix
test : Size
test = 123
test = 123
